# cloudflare-only-nginx

./: .gitignore  LICENSE  README.md  cloudflare_ips_reload.py  ip6tables.rules  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: lint_python.yml
etc/iptables/: ip6tables.rules  iptables.rules
etc/nginx/: cloudflare.ipv4.conf  cloudflare.ipv6.conf  nginx.conf
nginx/: nginx.conf
src/: cloudflare_ips_reload.py
